# modern

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: checks.yml
mode/: service.py  threads.py
mode/types/: __init__.py  service.py
modern/: __init__.py  compat.py  diag.py  service.py  threads.py
modern/codecs/: __init__.py  base.py  codec_bool_int.py  codec_bool_str.py  codec_bytes.py  codec_bytes_str.py  codec_datetime_isoformat.py  codec_float.py  codec_float_datetime_timestamp.py  codec_float_int.py  codec_int.py  codec_int_bool.py  codec_str.py  codec_str_bool.py  codec_str_datetime_isoformat.py  codec_str_float.py  codec_str_int.py  codec_str_uuid.py  codec_timestamp.py  codec_uuid.py  instances.py  json.py  json_converter.py  json_helpers.py  types.py
modern/types/: diag.py  service.py
requirements/: dev.txt  test.in  test.txt
tests/: pytest.ini  test_diag.py  test_service.py  test_threads.py
tests/codecs/: test_base.py  test_codec_bool_int.py  test_codec_bool_str.py  test_codec_bytes.py  test_codec_bytes_str.py  test_codec_datetime_isoformat.py  test_codec_float.py  test_codec_float_datetime_timestamp.py  test_codec_float_int.py  test_codec_int.py  test_codec_int_bool.py  test_codec_str.py  test_codec_str_bool.py  test_codec_str_datetime_isoformat.py  test_codec_str_float.py  test_codec_str_int.py  test_codec_str_uuid.py  test_codec_timestamp.py  test_codec_uuid.py  test_instances.py  test_json_annotated.py  test_json_decoder.py  test_json_encoder.py  test_json_serializing.py
tests/tools/: services.py
(+8 files in other folders)
